# neurolite

./: .gitignore  .pre-commit-config.yaml  .pypirc.template  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PACKAGING.md  README.md  deploy_docs.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_cli_simple.py  test_debug.py  test_simple.py  tox.ini  validate_auth.py
.github/workflows/: ci.yml
.kiro/specs/neurolite-data-detection/: design.md  requirements.md  tasks.md
checkpoints/model_1753948353/: checkpoint_epoch_000.pt
docs/: README.md  api_documentation.md  changelog.rst  conf.py  contributing.rst  faq.rst  index.md  index.rst  package_validation.md  requirements.txt  troubleshooting.md
docs/_static/: custom.css
docs/api/: README.md  core.rst
docs/examples/: README.md
docs/examples/basic/: image_classification.py  text_classification.py
docs/getting_started/: basic_concepts.rst  installation.rst  quickstart.rst
docs/tests/: requirements.txt  run_tests.py  test_documentation.py  test_examples.py
docs/tutorials/: 01_quick_start.ipynb  README.md  image_classification.rst
docs/tutorials/computer_vision/: 01_image_classification.ipynb
docs/tutorials/nlp/: 01_text_classification.ipynb
examples/: api_deployment_example.py  basic_usage.py  hyperparameter_optimization_example.py  multi_domain_demo.py  performance_benchmarks_example.py
neurolite/: __init__.py  _version.py  api.py  cli.py  visualization.py
neurolite/analyzers/: __init__.py  complexity_analyzer.py  statistical_analyzer.py
neurolite/cli/: __init__.py  main.py
neurolite/core/: __init__.py  benchmarks.py  config.py  data_models.py  data_profiler.py  exceptions.py  logger.py  performance.py  plugin_integration.py  plugin_templates.py  plugins.py  utils.py
neurolite/data/: __init__.py  augmentation.py  cleaner.py  detector.py  loader.py  preprocessor.py  splitter.py  validator.py
neurolite/deployment/: __init__.py  exporter.py  optimizer.py  server.py  validator.py
neurolite/deployment/formats/: __init__.py  base.py  onnx.py  pytorch.py  tflite.py
neurolite/detectors/: __init__.py  data_type_detector.py  domain_detector.py  file_detector.py  quality_detector.py  task_detector.py
neurolite/evaluation/: __init__.py  evaluator.py  metrics.py  validator.py  visualizer.py
neurolite/models/: __init__.py  base.py  factory.py  registry.py
neurolite/models/dl/: __init__.py  nlp.py  vision.py
neurolite/models/ml/: __init__.py  ensemble_models.py  sklearn_models.py  xgboost_models.py
neurolite/recommenders/: __init__.py  model_recommender.py  preprocessing_recommender.py
neurolite/training/: __init__.py  callbacks.py  config.py  optimizer.py  trainer.py
neurolite/visualization/: __init__.py  dashboard.py  exporters.py  plots.py  reports.py
neurolite/visualization/templates/: evaluation_report.html
neurolite/workflows/: __init__.py  base.py  factory.py  nlp.py  tabular.py  vision.py
scripts/: release.py  validate_package.py
temp_build/: neurolite-0.2.0-py3-none-any.whl
tests/: __init__.py  run_comprehensive_tests.py  test_api_integration.py  test_cli.py  test_complexity_analyzer.py  test_comprehensive_suite_validation.py  test_core_config.py  test_core_exceptions.py  test_core_logger.py  test_core_utils.py  test_data_augmentation.py  test_data_cleaner.py  test_data_detector.py  test_data_generator.py  test_data_loader.py  test_data_models.py  test_data_preprocessor.py  test_data_profiler.py  test_data_profiler_performance.py  test_data_splitter.py  test_data_type_detector.py  test_data_validator.py  test_deployment_api_server.py  test_deployment_exporter.py  test_deployment_optimizer.py  test_deployment_validator.py  test_dl_nlp_models.py  test_dl_vision_models.py  test_domain_detector_cv.py  test_domain_detector_nlp.py  test_domain_detector_timeseries.py  test_evaluation_evaluator.py  test_evaluation_metrics.py  test_evaluation_validator.py  test_evaluation_visualizer.py  test_exceptions.py  test_file_detector.py  test_final_validation.py  test_hyperparameter_optimization.py  test_integration_e2e.py  (+22 more)
tests/integration/: __init__.py  test_compatibility.py  test_data_generators.py  test_end_to_end_workflows.py  test_performance_benchmarks.py
