[metadata]
name = neurolite
version = 0.1.0
description = Automated AI/ML library for intelligent data detection and model recommendation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dot-css/neurolite
author = NeuroLite Team
author_email = team@neurolite.ai
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.5.0
    numpy>=1.21.0
    scipy>=1.9.0
    scikit-learn>=1.2.0
    python-magic>=0.4.27
    python-dateutil>=2.8.0
    chardet>=5.0.0
    statsmodels>=0.14.0
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
docs =
    sphinx>=6.0.0
    sphinx-rtd-theme>=1.2.0
    sphinx-autodoc-typehints>=1.22.0
cv =
    opencv-python>=4.7.0
    Pillow>=9.0.0
audio =
    librosa>=0.10.0
    soundfile>=0.12.0
nlp =
    transformers>=4.25.0
    nltk>=3.8.0
dl =
    torch>=2.0.0
    tensorflow>=2.12.0
all =
    %(cv)s
    %(audio)s
    %(nlp)s
    %(dl)s

[options.entry_points]
console_scripts =
    neurolite = neurolite.cli:main

# flake8 configuration
[flake8]
max-line-length = 88
extend-ignore = E203, E501, W503
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache,
    build,
    dist,
    *.egg-info,
    .venv,
    venv
per-file-ignores =
    __init__.py:F401
    tests/*:S101

# bandit configuration
[bandit]
exclude_dirs = tests
skips = B101,B601